--- a/style.css
+++ b/style.css
@@ -10,17 +10,22 @@ body {
 
 .wrapper-app{
     max-width: 600px;
-    margin: 30px auto;
+    margin: 15px auto;
     padding: 20px;
     border: 1px solid  #7c7c97 ;
     border-radius: 5px;
 }
 
-p{
+.foot{
     text-align: center;
-    margin:0  auto;
-    font-size: 0.875rem;
+    font-size: 0.875rem; 
 }
+
+.foot a {
+  
+  color: blue !important;
+}
+
 
 h1{
 
@@ -37,4 +42,58 @@ ul {
   padding: 0;
   line-height: 1;
   color: #7c7c90;
+}
+
+img{
+    height: 50px;
+    width: 50px;
+}
+
+a{
+  color: black !important;
+  text-decoration: none;
+
+}
+
+a:link {
+  text-decoration: none;
+  
+}
+
+.col{
+    margin-top: 14px;
+}
+
+.first {
+  display: flex;
+  
+  /*position: relative;*/
+}
+
+.degree {
+ /* position: absolute;
+  font-size: 14px;
+  left: 125px;
+  top: 1px;*/
+  font-size: 12px;
+  text-decoration: none;
+  color: black;
+}
+
+.temp {
+  font-size: 50px;
+  line-height: 1;
+  color: black;
+  font-weight: 400;
+}
+
+.temp-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  
+}
+
+.degree a:hover {
+  text-decoration: underline;
 }
