--- a/style.css
+++ b/style.css
@@ -1,19 +1,35 @@
+/*@import url('https://fonts.googleapis.com/css2?family=Varela&display=swap');
+*/
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;500&display=swap');
+
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: sans-serif;
+  font-family: 'Varela', sans-serif;
+  font-family: 'Merriweather Sans', sans-serif;
+  background-color: #F9F7FE;
 }
 
+header{
+  margin-bottom: 1.5rem;
+}
 
+/*.container{
+  background-color: #ffff;
+}*/
 
 .wrapper-app{
     max-width: 600px;
-    margin: 15px auto;
+    margin: 25px auto;
     padding: 20px;
     border: 1px solid  #7c7c97 ;
-    border-radius: 5px;
+    border-radius: 10px;
+    box-shadow: 0 30px 50px #41326414;
+    
+;
+    background-color: #ffff;
 }
 
 .foot{
